# bin-generator

./: .gitignore  README.md  pyproject.toml
examples/: simple_bin.py  simple_bin.stl
src/bin_generator/: __init__.py  bin.py  cli.py  ears.py  export.py  pattern.py
